--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 </head>
 
 <body>
-  <!-- Start coding here -->
+  <header>
+    <h1>Welcome to CSS Color Hack Hours!</h1>
+  </header>
+
+  <main>
+    <p>During CSS Color Hack Hours, we explore the art of using colors in web design to create visually appealing and engaging experiences. Join us as we dive into the world of color theory, learn about various color schemes, and experiment with creative ways to apply colors in CSS.</p>
+    <p>Whether you're a beginner or an experienced developer, there's always something new to discover in the realm of color hacks. Let your imagination run wild and unleash the power of colors to make your websites stand out!</p>
+  </main>
+
+  <footer>
+    <p>© 2024 CSS Color Hack Hours. All rights reserved.</p>
+  </footer>
 </body>
 
 </html>
