--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 </head>
 
 <body>
-  <!-- Start coding here -->
+  <div class="gradient-background">
+    <div class="content-box">
+    <header>👾Welcome to CSS Color👾</header>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br>
+      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br>
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br>
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br>
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    </div>
+  </div>
 </body>
 
 </html>
